<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>r2r_robot_template</name>
  <version>0.1.0</version>
  <description>ROS2, Rust, and safe_drive robot template</description>
  <maintainer email="yukitoharuto@outlook.jp">mituba3328</maintainer>
  <license>Apache License 2.0</license>

  <!-- ROS2 depend-->
  <depend>std_msgs</depend>

  <!-- test depend-->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cargo</build_type>
  </export>
</package>
